# cookiecutter-django

./: .bandit  .dockerignore  .editorconfig  .env.example  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .pyup.yml  .readthedocs.yaml  .travis.yml  AGENTS.md  AUTHORS.rst  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTING.rst  CONTRIBUTORS.md  CONTRIBUTORS.rst  CONTRIBUTORS.txt  GIT_MANAGE.md  LICENSE  LICENSE.rst  Makefile  README.MD  README.md  README.rst  SECURITY.md  active.sh  changelog.md  clear_db.sh  cookiecutter.json  dependencies.py  dev-requirements.txt  licenses.json  migrate.sh  pyproject.toml  pytest.ini  requirements.txt  requirements_to_watch.txt  runtime.txt  (+4 more)
{{cookiecutter.project_slug}}/: .buildpacks  .bumpversion.cfg  .coveragerc  .dockerignore  .drone.yml  .editorconfig  .env-example  .github-ci.yml  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .pylintrc  .readthedocs.yml  .travis.yml  .watchmanconfig  CONTRIBUTORS.txt  Dockerfile  Dockerrun.aws.json  Gruntfile.js  LICENSE  Procfile  README.md  README.rst  active.sh  admin.py  app.json  dev.yml  docker-compose.docs.yml  docker-compose.local.yml  docker-compose.prod.yml  docker-compose.production.yml  docker-compose.staging.yml  docker-compose.yml  docker-sync.yml  docs.yml  ebsetenv.py  env.example  git_clean_cache.sh  gulpfile.js  gulpfile.mjs  (+21 more)
{{cookiecutter.project_slug}}/.devcontainer/: bashrc.override.sh  devcontainer.json
{{cookiecutter.project_slug}}/.ebextensions/: 01_envvars.config.example  10_packages.config  10_python.config  20_elasticcache.config  30_options.config  40_python.config  50_apache.config  enable_mod_deflate.conf
{{cookiecutter.project_slug}}/.env/.local/: .postgres
{{cookiecutter.project_slug}}/.env/.production/: .caddy  .postgres
{{cookiecutter.project_slug}}/.envs/: .django  .django.local
{{cookiecutter.project_slug}}/.envs/.local/: .celery  .django  .mariadb  .mysql  .postgres
{{cookiecutter.project_slug}}/.envs/.production/: .caddy  .django  .mysql  .postgres  .traefik
{{cookiecutter.project_slug}}/.envs/dev/: postgres
{{cookiecutter.project_slug}}/.envs/prod/: django
{{cookiecutter.project_slug}}/.github/: dependabot.yml
{{cookiecutter.project_slug}}/.github/workflows/: ci.yml  merge-pr.yaml
{{cookiecutter.project_slug}}/.scripts/: protect_branch-pre-commit.py  protect_branch-pre-push.py  semver_bump.sh
{{cookiecutter.project_slug}}/compose/caddy/: Caddyfile  Dockerfile
{{cookiecutter.project_slug}}/compose/django/: Dockerfile  Dockerfile-dev  Dockerfile-local  Dockerfile-test  entrypoint.py  entrypoint.sh  gunicorn.sh  start-dev.sh  test_entrypoint.py
{{cookiecutter.project_slug}}/compose/nginx/: Dockerfile  dhparams.example.pem  nginx-secure.conf  nginx.conf  start.sh
{{cookiecutter.project_slug}}/compose/node/: Dockerfile-dev
{{cookiecutter.project_slug}}/compose/postgres/: Dockerfile  backup.sh  list-backups.sh  restore.sh
{{cookiecutter.project_slug}}/config/: __init__.py  api.py  api_router.py  apps.py  asgi.py  celery_app.py  urls.py  websocket.py  wsgi.py
{{cookiecutter.project_slug}}/config/settings/: base.py  common.py  local.py  production.py  test.py
{{cookiecutter.project_slug}}/deployment/: deploy.yml  ingress.yml
{{cookiecutter.project_slug}}/docker/caddy/: Caddyfile  Dockerfile
{{cookiecutter.project_slug}}/docker/django/: Dockerfile
{{cookiecutter.project_slug}}/docker/mailhog/: Dockerfile
{{cookiecutter.project_slug}}/docker/postgres/: Dockerfile
{{cookiecutter.project_slug}}/docker/redis/: Dockerfile
{{cookiecutter.project_slug}}/docs/: Makefile  conf.py  deploy.rst  docker_ebs.rst  docker_ec2.rst  howto.rst  index.rst  install.rst  make.bat  users.rst
{{cookiecutter.project_slug}}/docs/_source/: conf.py  howto.rst
{{cookiecutter.project_slug}}/docs/pycharm/: configuration.rst
{{cookiecutter.project_slug}}/features/: my_features.feature
{{cookiecutter.project_slug}}/features/steps/: my_feature.py
{{cookiecutter.project_slug}}/frontend/: package.json
{{cookiecutter.project_slug}}/frontend/config/: paths.js  webpack.config.dev.js  webpack.config.prod.js  webpackDevServer.config.js
{{cookiecutter.project_slug}}/frontend/src/: App.js  (+4 more)
{{cookiecutter.project_slug}}/fruit/: admin.py  apps.py  models.py  urls.py  views.py
{{cookiecutter.project_slug}}/licenses/: -temporary-placeholder.txt  0bsd.txt  afl-3.0.txt  agpl-3.0.txt  apache-2.0.txt  bsd-2-clause.txt  bsd-3-clause-clear.txt  bsd-3-clause.txt  bsd-4-clause.txt  bsl-1.0.txt  cc-by-4.0.txt  cc-by-sa-4.0.txt  cecill-2.1.txt  epl-1.0.txt  epl-2.0.txt  eupl-1.1.txt  gpl-2.0.txt  isc.txt  mit-0.txt  mit.txt  mpl-2.0.txt  ncsa.txt  odbl-1.0.txt  ofl-1.1.txt  osl-3.0.txt  postgresql.txt  unlicense.txt  upl-1.0.txt  vim.txt  zlib.txt
{{cookiecutter.project_slug}}/locale/: README.md  README.rst
{{cookiecutter.project_slug}}/requirements/: base.txt  dev.txt  local.txt  prod.txt  production.txt  project.txt  test.txt
{{cookiecutter.project_slug}}/sc/: create_db.sh  git_clean_cache.sh  git_create_repo.sh  venv_create.sh
{{cookiecutter.project_slug}}/startapp_template/: admin.py-tpl  apps.py-tpl  forms.py-tpl  models.py-tpl  tasks.py-tpl  views.py-tpl
{{cookiecutter.project_slug}}/tests/: all.settings  engine.py  hitchreqs.txt  register-and-log-in.test  test_merge_production_dotenvs_in_dotenv.py
{{cookiecutter.project_slug}}/utility/: install_os_dependencies.sh  install_python_dependencies.sh  requirements-bionic.apt  requirements-bookworm.apt  requirements-bullseye.apt  requirements-buster.apt  requirements-focal.apt  requirements-jammy.apt  requirements-jessie.apt  requirements-stretch.apt  requirements-trusty.apt  requirements-wheezy.apt  requirements-xenial.apt  requirements.apt  requirements.apt.xenial
{{cookiecutter.project_slug}}/vue_frontend/: .env  .gitignore  README.md  package.json  vue.config.js
{{cookiecutter.project_slug}}/webpack/: common.config.js  dev.config.js  prod.config.js
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/: __init__.py  celery_app.py  conftest.py  storage.py  wsgi.py
(+595 files in other folders)
